parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALFNUM
    STRING

Grammar

Rule 0     S' -> expresion_apply
Rule 1     expresion_apply -> LPAREN words QUOTE expresion QUOTE lista RPAREN
Rule 2     words -> APPLY
Rule 3     words -> APLICAR
Rule 4     expresion -> operador
Rule 5     expresion -> funcion
Rule 6     operador -> PLUS
Rule 7     operador -> MINUS
Rule 8     operador -> TIMES
Rule 9     operador -> DIVIDE
Rule 10    operador -> OPSLAH
Rule 11    operador -> MODULO
Rule 12    funcion -> MAX
Rule 13    funcion -> MIN
Rule 14    funcion -> CONS
Rule 15    funcion -> APPEND
Rule 16    funcion -> FIRST
Rule 17    funcion -> REST
Rule 18    lista -> LPAREN RPAREN
Rule 19    lista -> LPAREN atomo RPAREN
Rule 20    lista -> LPAREN atomo atomo RPAREN
Rule 21    lista -> LPAREN atomo atomo atomo RPAREN
Rule 22    lista -> LPAREN atomo atomo atomo atomo RPAREN
Rule 23    lista -> LPAREN atomo atomo atomo atomo atomo RPAREN
Rule 24    lista -> LPAREN lista lista RPAREN
Rule 25    lista -> LPAREN lista atomo RPAREN
Rule 26    lista -> LPAREN atomo lista RPAREN
Rule 27    lista -> LCOR atomo atomo RCOR
Rule 28    atomo -> DECIMAL
Rule 29    atomo -> NUMERO

Terminals, with rules where they appear

ALFNUM               : 
APLICAR              : 3
APPEND               : 15
APPLY                : 2
CONS                 : 14
DECIMAL              : 28
DIVIDE               : 9
FIRST                : 16
LCOR                 : 27
LPAREN               : 1 18 19 20 21 22 23 24 25 26
MAX                  : 12
MIN                  : 13
MINUS                : 7
MODULO               : 11
NUMERO               : 29
OPSLAH               : 10
PLUS                 : 6
QUOTE                : 1 1
RCOR                 : 27
REST                 : 17
RPAREN               : 1 18 19 20 21 22 23 24 25 26
STRING               : 
TIMES                : 8
error                : 

Nonterminals, with rules where they appear

atomo                : 19 20 20 21 21 21 22 22 22 22 23 23 23 23 23 25 26 27 27
expresion            : 1
expresion_apply      : 0
funcion              : 5
lista                : 1 24 24 25 26
operador             : 4
words                : 1

Parsing method: LALR

state 0

    (0) S' -> . expresion_apply
    (1) expresion_apply -> . LPAREN words QUOTE expresion QUOTE lista RPAREN

    LPAREN          shift and go to state 2

    expresion_apply                shift and go to state 1

state 1

    (0) S' -> expresion_apply .



state 2

    (1) expresion_apply -> LPAREN . words QUOTE expresion QUOTE lista RPAREN
    (2) words -> . APPLY
    (3) words -> . APLICAR

    APPLY           shift and go to state 4
    APLICAR         shift and go to state 5

    words                          shift and go to state 3

state 3

    (1) expresion_apply -> LPAREN words . QUOTE expresion QUOTE lista RPAREN

    QUOTE           shift and go to state 6


state 4

    (2) words -> APPLY .

    QUOTE           reduce using rule 2 (words -> APPLY .)


state 5

    (3) words -> APLICAR .

    QUOTE           reduce using rule 3 (words -> APLICAR .)


state 6

    (1) expresion_apply -> LPAREN words QUOTE . expresion QUOTE lista RPAREN
    (4) expresion -> . operador
    (5) expresion -> . funcion
    (6) operador -> . PLUS
    (7) operador -> . MINUS
    (8) operador -> . TIMES
    (9) operador -> . DIVIDE
    (10) operador -> . OPSLAH
    (11) operador -> . MODULO
    (12) funcion -> . MAX
    (13) funcion -> . MIN
    (14) funcion -> . CONS
    (15) funcion -> . APPEND
    (16) funcion -> . FIRST
    (17) funcion -> . REST

    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    TIMES           shift and go to state 12
    DIVIDE          shift and go to state 13
    OPSLAH          shift and go to state 14
    MODULO          shift and go to state 15
    MAX             shift and go to state 16
    MIN             shift and go to state 17
    CONS            shift and go to state 18
    APPEND          shift and go to state 19
    FIRST           shift and go to state 20
    REST            shift and go to state 21

    expresion                      shift and go to state 7
    operador                       shift and go to state 8
    funcion                        shift and go to state 9

state 7

    (1) expresion_apply -> LPAREN words QUOTE expresion . QUOTE lista RPAREN

    QUOTE           shift and go to state 22


state 8

    (4) expresion -> operador .

    QUOTE           reduce using rule 4 (expresion -> operador .)


state 9

    (5) expresion -> funcion .

    QUOTE           reduce using rule 5 (expresion -> funcion .)


state 10

    (6) operador -> PLUS .

    QUOTE           reduce using rule 6 (operador -> PLUS .)


state 11

    (7) operador -> MINUS .

    QUOTE           reduce using rule 7 (operador -> MINUS .)


state 12

    (8) operador -> TIMES .

    QUOTE           reduce using rule 8 (operador -> TIMES .)


state 13

    (9) operador -> DIVIDE .

    QUOTE           reduce using rule 9 (operador -> DIVIDE .)


state 14

    (10) operador -> OPSLAH .

    QUOTE           reduce using rule 10 (operador -> OPSLAH .)


state 15

    (11) operador -> MODULO .

    QUOTE           reduce using rule 11 (operador -> MODULO .)


state 16

    (12) funcion -> MAX .

    QUOTE           reduce using rule 12 (funcion -> MAX .)


state 17

    (13) funcion -> MIN .

    QUOTE           reduce using rule 13 (funcion -> MIN .)


state 18

    (14) funcion -> CONS .

    QUOTE           reduce using rule 14 (funcion -> CONS .)


state 19

    (15) funcion -> APPEND .

    QUOTE           reduce using rule 15 (funcion -> APPEND .)


state 20

    (16) funcion -> FIRST .

    QUOTE           reduce using rule 16 (funcion -> FIRST .)


state 21

    (17) funcion -> REST .

    QUOTE           reduce using rule 17 (funcion -> REST .)


state 22

    (1) expresion_apply -> LPAREN words QUOTE expresion QUOTE . lista RPAREN
    (18) lista -> . LPAREN RPAREN
    (19) lista -> . LPAREN atomo RPAREN
    (20) lista -> . LPAREN atomo atomo RPAREN
    (21) lista -> . LPAREN atomo atomo atomo RPAREN
    (22) lista -> . LPAREN atomo atomo atomo atomo RPAREN
    (23) lista -> . LPAREN atomo atomo atomo atomo atomo RPAREN
    (24) lista -> . LPAREN lista lista RPAREN
    (25) lista -> . LPAREN lista atomo RPAREN
    (26) lista -> . LPAREN atomo lista RPAREN
    (27) lista -> . LCOR atomo atomo RCOR

    LPAREN          shift and go to state 23
    LCOR            shift and go to state 25

    lista                          shift and go to state 24

state 23

    (18) lista -> LPAREN . RPAREN
    (19) lista -> LPAREN . atomo RPAREN
    (20) lista -> LPAREN . atomo atomo RPAREN
    (21) lista -> LPAREN . atomo atomo atomo RPAREN
    (22) lista -> LPAREN . atomo atomo atomo atomo RPAREN
    (23) lista -> LPAREN . atomo atomo atomo atomo atomo RPAREN
    (24) lista -> LPAREN . lista lista RPAREN
    (25) lista -> LPAREN . lista atomo RPAREN
    (26) lista -> LPAREN . atomo lista RPAREN
    (28) atomo -> . DECIMAL
    (29) atomo -> . NUMERO
    (18) lista -> . LPAREN RPAREN
    (19) lista -> . LPAREN atomo RPAREN
    (20) lista -> . LPAREN atomo atomo RPAREN
    (21) lista -> . LPAREN atomo atomo atomo RPAREN
    (22) lista -> . LPAREN atomo atomo atomo atomo RPAREN
    (23) lista -> . LPAREN atomo atomo atomo atomo atomo RPAREN
    (24) lista -> . LPAREN lista lista RPAREN
    (25) lista -> . LPAREN lista atomo RPAREN
    (26) lista -> . LPAREN atomo lista RPAREN
    (27) lista -> . LCOR atomo atomo RCOR

    RPAREN          shift and go to state 26
    DECIMAL         shift and go to state 29
    NUMERO          shift and go to state 30
    LPAREN          shift and go to state 23
    LCOR            shift and go to state 25

    atomo                          shift and go to state 27
    lista                          shift and go to state 28

state 24

    (1) expresion_apply -> LPAREN words QUOTE expresion QUOTE lista . RPAREN

    RPAREN          shift and go to state 31


state 25

    (27) lista -> LCOR . atomo atomo RCOR
    (28) atomo -> . DECIMAL
    (29) atomo -> . NUMERO

    DECIMAL         shift and go to state 29
    NUMERO          shift and go to state 30

    atomo                          shift and go to state 32

state 26

    (18) lista -> LPAREN RPAREN .

    RPAREN          reduce using rule 18 (lista -> LPAREN RPAREN .)
    LPAREN          reduce using rule 18 (lista -> LPAREN RPAREN .)
    LCOR            reduce using rule 18 (lista -> LPAREN RPAREN .)
    DECIMAL         reduce using rule 18 (lista -> LPAREN RPAREN .)
    NUMERO          reduce using rule 18 (lista -> LPAREN RPAREN .)


state 27

    (19) lista -> LPAREN atomo . RPAREN
    (20) lista -> LPAREN atomo . atomo RPAREN
    (21) lista -> LPAREN atomo . atomo atomo RPAREN
    (22) lista -> LPAREN atomo . atomo atomo atomo RPAREN
    (23) lista -> LPAREN atomo . atomo atomo atomo atomo RPAREN
    (26) lista -> LPAREN atomo . lista RPAREN
    (28) atomo -> . DECIMAL
    (29) atomo -> . NUMERO
    (18) lista -> . LPAREN RPAREN
    (19) lista -> . LPAREN atomo RPAREN
    (20) lista -> . LPAREN atomo atomo RPAREN
    (21) lista -> . LPAREN atomo atomo atomo RPAREN
    (22) lista -> . LPAREN atomo atomo atomo atomo RPAREN
    (23) lista -> . LPAREN atomo atomo atomo atomo atomo RPAREN
    (24) lista -> . LPAREN lista lista RPAREN
    (25) lista -> . LPAREN lista atomo RPAREN
    (26) lista -> . LPAREN atomo lista RPAREN
    (27) lista -> . LCOR atomo atomo RCOR

    RPAREN          shift and go to state 34
    DECIMAL         shift and go to state 29
    NUMERO          shift and go to state 30
    LPAREN          shift and go to state 23
    LCOR            shift and go to state 25

    atomo                          shift and go to state 33
    lista                          shift and go to state 35

state 28

    (24) lista -> LPAREN lista . lista RPAREN
    (25) lista -> LPAREN lista . atomo RPAREN
    (18) lista -> . LPAREN RPAREN
    (19) lista -> . LPAREN atomo RPAREN
    (20) lista -> . LPAREN atomo atomo RPAREN
    (21) lista -> . LPAREN atomo atomo atomo RPAREN
    (22) lista -> . LPAREN atomo atomo atomo atomo RPAREN
    (23) lista -> . LPAREN atomo atomo atomo atomo atomo RPAREN
    (24) lista -> . LPAREN lista lista RPAREN
    (25) lista -> . LPAREN lista atomo RPAREN
    (26) lista -> . LPAREN atomo lista RPAREN
    (27) lista -> . LCOR atomo atomo RCOR
    (28) atomo -> . DECIMAL
    (29) atomo -> . NUMERO

    LPAREN          shift and go to state 23
    LCOR            shift and go to state 25
    DECIMAL         shift and go to state 29
    NUMERO          shift and go to state 30

    lista                          shift and go to state 36
    atomo                          shift and go to state 37

state 29

    (28) atomo -> DECIMAL .

    RPAREN          reduce using rule 28 (atomo -> DECIMAL .)
    DECIMAL         reduce using rule 28 (atomo -> DECIMAL .)
    NUMERO          reduce using rule 28 (atomo -> DECIMAL .)
    LPAREN          reduce using rule 28 (atomo -> DECIMAL .)
    LCOR            reduce using rule 28 (atomo -> DECIMAL .)
    RCOR            reduce using rule 28 (atomo -> DECIMAL .)


state 30

    (29) atomo -> NUMERO .

    RPAREN          reduce using rule 29 (atomo -> NUMERO .)
    DECIMAL         reduce using rule 29 (atomo -> NUMERO .)
    NUMERO          reduce using rule 29 (atomo -> NUMERO .)
    LPAREN          reduce using rule 29 (atomo -> NUMERO .)
    LCOR            reduce using rule 29 (atomo -> NUMERO .)
    RCOR            reduce using rule 29 (atomo -> NUMERO .)


state 31

    (1) expresion_apply -> LPAREN words QUOTE expresion QUOTE lista RPAREN .

    $end            reduce using rule 1 (expresion_apply -> LPAREN words QUOTE expresion QUOTE lista RPAREN .)


state 32

    (27) lista -> LCOR atomo . atomo RCOR
    (28) atomo -> . DECIMAL
    (29) atomo -> . NUMERO

    DECIMAL         shift and go to state 29
    NUMERO          shift and go to state 30

    atomo                          shift and go to state 38

state 33

    (20) lista -> LPAREN atomo atomo . RPAREN
    (21) lista -> LPAREN atomo atomo . atomo RPAREN
    (22) lista -> LPAREN atomo atomo . atomo atomo RPAREN
    (23) lista -> LPAREN atomo atomo . atomo atomo atomo RPAREN
    (28) atomo -> . DECIMAL
    (29) atomo -> . NUMERO

    RPAREN          shift and go to state 40
    DECIMAL         shift and go to state 29
    NUMERO          shift and go to state 30

    atomo                          shift and go to state 39

state 34

    (19) lista -> LPAREN atomo RPAREN .

    RPAREN          reduce using rule 19 (lista -> LPAREN atomo RPAREN .)
    LPAREN          reduce using rule 19 (lista -> LPAREN atomo RPAREN .)
    LCOR            reduce using rule 19 (lista -> LPAREN atomo RPAREN .)
    DECIMAL         reduce using rule 19 (lista -> LPAREN atomo RPAREN .)
    NUMERO          reduce using rule 19 (lista -> LPAREN atomo RPAREN .)


state 35

    (26) lista -> LPAREN atomo lista . RPAREN

    RPAREN          shift and go to state 41


state 36

    (24) lista -> LPAREN lista lista . RPAREN

    RPAREN          shift and go to state 42


state 37

    (25) lista -> LPAREN lista atomo . RPAREN

    RPAREN          shift and go to state 43


state 38

    (27) lista -> LCOR atomo atomo . RCOR

    RCOR            shift and go to state 44


state 39

    (21) lista -> LPAREN atomo atomo atomo . RPAREN
    (22) lista -> LPAREN atomo atomo atomo . atomo RPAREN
    (23) lista -> LPAREN atomo atomo atomo . atomo atomo RPAREN
    (28) atomo -> . DECIMAL
    (29) atomo -> . NUMERO

    RPAREN          shift and go to state 46
    DECIMAL         shift and go to state 29
    NUMERO          shift and go to state 30

    atomo                          shift and go to state 45

state 40

    (20) lista -> LPAREN atomo atomo RPAREN .

    RPAREN          reduce using rule 20 (lista -> LPAREN atomo atomo RPAREN .)
    LPAREN          reduce using rule 20 (lista -> LPAREN atomo atomo RPAREN .)
    LCOR            reduce using rule 20 (lista -> LPAREN atomo atomo RPAREN .)
    DECIMAL         reduce using rule 20 (lista -> LPAREN atomo atomo RPAREN .)
    NUMERO          reduce using rule 20 (lista -> LPAREN atomo atomo RPAREN .)


state 41

    (26) lista -> LPAREN atomo lista RPAREN .

    RPAREN          reduce using rule 26 (lista -> LPAREN atomo lista RPAREN .)
    LPAREN          reduce using rule 26 (lista -> LPAREN atomo lista RPAREN .)
    LCOR            reduce using rule 26 (lista -> LPAREN atomo lista RPAREN .)
    DECIMAL         reduce using rule 26 (lista -> LPAREN atomo lista RPAREN .)
    NUMERO          reduce using rule 26 (lista -> LPAREN atomo lista RPAREN .)


state 42

    (24) lista -> LPAREN lista lista RPAREN .

    RPAREN          reduce using rule 24 (lista -> LPAREN lista lista RPAREN .)
    LPAREN          reduce using rule 24 (lista -> LPAREN lista lista RPAREN .)
    LCOR            reduce using rule 24 (lista -> LPAREN lista lista RPAREN .)
    DECIMAL         reduce using rule 24 (lista -> LPAREN lista lista RPAREN .)
    NUMERO          reduce using rule 24 (lista -> LPAREN lista lista RPAREN .)


state 43

    (25) lista -> LPAREN lista atomo RPAREN .

    RPAREN          reduce using rule 25 (lista -> LPAREN lista atomo RPAREN .)
    LPAREN          reduce using rule 25 (lista -> LPAREN lista atomo RPAREN .)
    LCOR            reduce using rule 25 (lista -> LPAREN lista atomo RPAREN .)
    DECIMAL         reduce using rule 25 (lista -> LPAREN lista atomo RPAREN .)
    NUMERO          reduce using rule 25 (lista -> LPAREN lista atomo RPAREN .)


state 44

    (27) lista -> LCOR atomo atomo RCOR .

    RPAREN          reduce using rule 27 (lista -> LCOR atomo atomo RCOR .)
    LPAREN          reduce using rule 27 (lista -> LCOR atomo atomo RCOR .)
    LCOR            reduce using rule 27 (lista -> LCOR atomo atomo RCOR .)
    DECIMAL         reduce using rule 27 (lista -> LCOR atomo atomo RCOR .)
    NUMERO          reduce using rule 27 (lista -> LCOR atomo atomo RCOR .)


state 45

    (22) lista -> LPAREN atomo atomo atomo atomo . RPAREN
    (23) lista -> LPAREN atomo atomo atomo atomo . atomo RPAREN
    (28) atomo -> . DECIMAL
    (29) atomo -> . NUMERO

    RPAREN          shift and go to state 48
    DECIMAL         shift and go to state 29
    NUMERO          shift and go to state 30

    atomo                          shift and go to state 47

state 46

    (21) lista -> LPAREN atomo atomo atomo RPAREN .

    RPAREN          reduce using rule 21 (lista -> LPAREN atomo atomo atomo RPAREN .)
    LPAREN          reduce using rule 21 (lista -> LPAREN atomo atomo atomo RPAREN .)
    LCOR            reduce using rule 21 (lista -> LPAREN atomo atomo atomo RPAREN .)
    DECIMAL         reduce using rule 21 (lista -> LPAREN atomo atomo atomo RPAREN .)
    NUMERO          reduce using rule 21 (lista -> LPAREN atomo atomo atomo RPAREN .)


state 47

    (23) lista -> LPAREN atomo atomo atomo atomo atomo . RPAREN

    RPAREN          shift and go to state 49


state 48

    (22) lista -> LPAREN atomo atomo atomo atomo RPAREN .

    RPAREN          reduce using rule 22 (lista -> LPAREN atomo atomo atomo atomo RPAREN .)
    LPAREN          reduce using rule 22 (lista -> LPAREN atomo atomo atomo atomo RPAREN .)
    LCOR            reduce using rule 22 (lista -> LPAREN atomo atomo atomo atomo RPAREN .)
    DECIMAL         reduce using rule 22 (lista -> LPAREN atomo atomo atomo atomo RPAREN .)
    NUMERO          reduce using rule 22 (lista -> LPAREN atomo atomo atomo atomo RPAREN .)


state 49

    (23) lista -> LPAREN atomo atomo atomo atomo atomo RPAREN .

    RPAREN          reduce using rule 23 (lista -> LPAREN atomo atomo atomo atomo atomo RPAREN .)
    LPAREN          reduce using rule 23 (lista -> LPAREN atomo atomo atomo atomo atomo RPAREN .)
    LCOR            reduce using rule 23 (lista -> LPAREN atomo atomo atomo atomo atomo RPAREN .)
    DECIMAL         reduce using rule 23 (lista -> LPAREN atomo atomo atomo atomo atomo RPAREN .)
    NUMERO          reduce using rule 23 (lista -> LPAREN atomo atomo atomo atomo atomo RPAREN .)

